--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "node-sass-chokidar": "^1.3.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts-ts": "3.1.0",
-    "node-sass-chokidar": "^1.3.4"
+    "react-scripts-ts": "3.1.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -24,6 +25,7 @@
     "@types/node": "^10.12.21",
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
+    "npm-run-all": "^4.1.5",
     "typescript": "^3.3.1"
   }
 }
