feat: footer with copyright and update date

--- a/package.json
+++ b/package.json
@@ -45,5 +45,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "react-git-info": "^2.0.0"
+  }
 }
