--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "react-git-info": "^2.0.0"
   }
 }
