--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run preparePdf && react-scripts build",
+    "build": "npm run prepareAssets && npm run preparePdf && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "preparePdf": "npx ts-node --project tsconfig.node.json buildScripts/preparePdf.tsx",
