feat: added image gallery for each project

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-scripts": "4.0.3",
     "ts-nameof.macro": "^4.2.2",
     "ts-node": "^10.0.0",
@@ -63,6 +64,7 @@
     "@types/imagemin-mozjpeg": "^8.0.0",
     "@types/imagemin-pngquant": "^8.0.0",
     "@types/lodash": "^4.14.170",
+    "@types/react-image-gallery": "^1.0.5",
     "glob": "^7.1.7",
     "image-conversion": "^2.1.1",
     "imagemin": "^7.0.1",
