--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "streetquest",
         "unicodes",
         "venv",
+        "viewerjs",
         "webfonts",
         "zadachi",
         "zopfli"
