--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "axios": "^0.21.1",
+    "date-fns": "^2.25.0",
     "fs-extra": "^10.0.0",
     "jimp": "^0.16.1",
     "lodash": "^4.17.21",
@@ -26,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
     "react-scripts": "4.0.3",
+    "sass-google-fonts": "^1.0.1",
     "ts-nameof.macro": "^4.2.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2",
