--- a/package.json
+++ b/package.json
@@ -3,9 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@react-pdf/renderer": "^2.0.15",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "date-fns": "^2.25.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass-google-fonts": "^1.0.1"
+  },
+  "devDependencies": {
+    "node-sass": "^6.0.0",
+    "ts-nameof.macro": "^4.2.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2",
+    "web-vitals": "^1.1.2",
+    "imagemin-mozjpeg": "^9.0.0",
+    "jimp": "^0.16.1",
+    "fs-extra": "^10.0.0",
     "@supercharge/promise-pool": "^1.7.0",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
@@ -17,21 +33,22 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "axios": "^0.21.1",
-    "date-fns": "^2.25.0",
-    "fs-extra": "^10.0.0",
-    "jimp": "^0.16.1",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "node-sass": "^6.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-image-gallery": "^1.2.7",
-    "react-scripts": "4.0.3",
-    "sass-google-fonts": "^1.0.1",
-    "ts-nameof.macro": "^4.2.2",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2",
-    "web-vitals": "^1.1.2"
+    "@react-pdf/renderer": "^2.0.15",
+    "@types/glob": "^7.1.3",
+    "@types/imagemin": "^7.0.0",
+    "@types/imagemin-jpegtran": "^5.0.0",
+    "@types/imagemin-mozjpeg": "^8.0.0",
+    "@types/imagemin-pngquant": "^8.0.0",
+    "@types/lodash": "^4.14.170",
+    "glob": "^7.1.7",
+    "image-conversion": "^2.1.1",
+    "imagemin": "^7.0.1",
+    "imagemin-pngquant": "^9.0.2",
+    "raw-loader": "^4.0.2",
+    "react-git-info": "^2.0.0",
+    "transliteration": "^2.2.0",
+    "webp-converter": "^2.3.3",
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,22 +75,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/imagemin": "^7.0.0",
-    "@types/imagemin-jpegtran": "^5.0.0",
-    "@types/imagemin-mozjpeg": "^8.0.0",
-    "@types/imagemin-pngquant": "^8.0.0",
-    "@types/lodash": "^4.14.170",
-    "@types/react-image-gallery": "^1.0.5",
-    "glob": "^7.1.7",
-    "image-conversion": "^2.1.1",
-    "imagemin": "^7.0.1",
-    "imagemin-pngquant": "^9.0.2",
-    "raw-loader": "^4.0.2",
-    "react-git-info": "^2.0.0",
-    "transliteration": "^2.2.0",
-    "webp-converter": "^2.3.3"
   }
 }
