feat: fullscreen image viewer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "drivenot",
         "dwebp",
         "entityframework",
+        "feen",
         "FFTM",
+        "Flaticon",
         "jpegtran",
         "langvm",
         "leancrm",
