--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-zoom-pan-pinch": "^2.1.3",
     "sass-google-fonts": "^1.0.1"
   },
   "devDependencies": {
