--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "mozjpeg",
         "mplusrounded",
         "noprint",
+        "noscreen",
         "Owin",
         "pyftsubset",
         "redaktor",
