--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@types/url-parse": "^1.4.4",
     "date-fns": "^2.25.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -13,44 +14,45 @@
     "react-dom": "^17.0.2",
     "react-hotkeys-hook": "^3.4.4",
     "react-zoom-pan-pinch": "^2.1.3",
-    "sass-google-fonts": "^1.0.1"
+    "sass-google-fonts": "^1.0.1",
+    "url-parse": "^1.5.3"
   },
   "devDependencies": {
-    "node-sass": "^6.0.0",
-    "ts-nameof.macro": "^4.2.2",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2",
-    "web-vitals": "^1.1.2",
-    "imagemin-mozjpeg": "^9.0.0",
-    "jimp": "^0.16.1",
-    "fs-extra": "^10.0.0",
     "@supercharge/promise-pool": "^1.7.0",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/fs-extra": "^9.0.11",
-    "@types/jest": "^26.0.23",
-    "@types/jimp": "^0.2.28",
-    "@types/node": "^12.20.15",
-    "@types/react": "^17.0.9",
-    "@types/react-dom": "^17.0.6",
-    "axios": "^0.21.1",
-    "@react-pdf/renderer": "^2.0.15",
     "@types/glob": "^7.1.3",
     "@types/imagemin": "^7.0.0",
     "@types/imagemin-jpegtran": "^5.0.0",
     "@types/imagemin-mozjpeg": "^8.0.0",
     "@types/imagemin-pngquant": "^8.0.0",
+    "@types/jest": "^26.0.23",
+    "@types/jimp": "^0.2.28",
     "@types/lodash": "^4.14.170",
+    "@types/node": "^12.20.15",
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
+    "axios": "^0.21.1",
+    "fs-extra": "^10.0.0",
     "glob": "^7.1.7",
     "image-conversion": "^2.1.1",
     "imagemin": "^7.0.1",
+    "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.2",
+    "jimp": "^0.16.1",
+    "node-sass": "^6.0.0",
+    "puppeteer": "^10.4.0",
     "raw-loader": "^4.0.2",
     "react-git-info": "^2.0.0",
+    "react-scripts": "4.0.3",
     "transliteration": "^2.2.0",
-    "webp-converter": "^2.3.3",
-    "react-scripts": "4.0.3"
+    "ts-nameof.macro": "^4.2.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2",
+    "web-vitals": "^1.1.2",
+    "webp-converter": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
