--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^17.0.6",
     "axios": "^0.21.1",
     "fs-extra": "^10.0.0",
+    "gh-pages": "^3.2.3",
     "glob": "^7.1.7",
     "image-conversion": "^2.1.1",
     "imagemin": "^7.0.1",
