--- a/.github/workflows/deployPages.yml
+++ b/.github/workflows/deployPages.yml
@@ -22,4 +22,4 @@ jobs:
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/tonn/tonn.github.io.git
           npx gh-pages -d build -u "github-actions-bot <support+actions@github.com>"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TEST }}
