--- a/.github/workflows/deployPages.yml
+++ b/.github/workflows/deployPages.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Deploy
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/tonn/tonn.github.io.git
-          npx gh-pages -d build -u "github-actions-bot <support+actions@github.com>"
+          npx gh-pages --dist build --dest ./cv -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.TEST }}
