--- a/.github/workflows/deployPages.yml
+++ b/.github/workflows/deployPages.yml
@@ -8,6 +8,10 @@ jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          access_token: ${{ github.GHTOKEN }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set-up Node
@@ -22,4 +26,4 @@ jobs:
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/tonn/tonn.github.io.git
           npx gh-pages --dist build --dest ./cv -u "github-actions-bot <support+actions@github.com>"
         env:
-          GITHUB_TOKEN: ${{ secrets.TEST }}
+          GITHUB_TOKEN: ${{ secrets.GHTOKEN }}
