--- a/.github/workflows/deployPages.yml
+++ b/.github/workflows/deployPages.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
         with:
-          access_token: ${{ github.GHTOKEN }}
+          access_token: ${{ secrets.GHTOKEN }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set-up Node
