--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-github-corner": "^2.5.0",
     "react-hotkeys-hook": "^3.4.4",
     "react-zoom-pan-pinch": "^2.1.3",
     "sass-google-fonts": "^1.0.1",
