feat: added google analytics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,12 @@
         "cleardot",
         "drivenot",
         "dwebp",
+        "ENQHE",
         "entityframework",
         "feen",
         "FFTM",
         "Flaticon",
+        "gtag",
         "jpegtran",
         "langvm",
         "leancrm",
